Enhance advance management and farmer services
- Update advance recording logic to check limits more effectively
- Refactor commission calculation in DashboardService to use RoundingMode
- Improve test cases for farmer service and dashboard service
- Add .idea/ and /target/ to .gitignore
- Include SpringDoc OpenAPI dependency in pom.xml